목록 기능, 상세 기능 추가
